# bevy

./: Cargo.toml  README.md
crates/bevy_ecs/: Cargo.toml  todo.txt
crates/bevy_ecs/macros/: Cargo.toml
crates/bevy_ecs/macros/src/: component.rs  lib.rs
crates/bevy_ecs/src/: additions.rs  archetype.rs  bundle.rs  component.rs  event.rs  lib.rs  packet.rs  resource.rs
crates/bevy_ecs/src/additions/: extras.rs  mod.rs  player.rs  wcommands.rs
crates/bevy_ecs/src/bundle/: mod.rs
crates/bevy_ecs/src/component/: mod.rs
crates/bevy_ecs/src/error/: command_handling.rs
crates/bevy_ecs/src/event/: eventslicer.rs  eventsystem.rs  exclusiveeventsystem.rs  mod.rs  optionevent.rs  update.rs
crates/bevy_ecs/src/observer/: distributed_storage.rs  runner.rs
crates/bevy_ecs/src/packet/: ecommands.rs  eventslicer.rs  eventsystem.rs  exclusiveeventsystem.rs  exclusivepacketsystem.rs  mod.rs  optionevent.rs  optionpacket.rs  packetslicer.rs  packetsystem.rs
crates/bevy_ecs/src/query/: fetch.rs
crates/bevy_ecs/src/query/fetch/: componentmut.rs
crates/bevy_ecs/src/storage/: resource.rs  sparse_set.rs
crates/bevy_ecs/src/storage/table/: column.rs  mod.rs
crates/bevy_ecs/src/system/: adapter_system.rs  builder.rs  combinator.rs  exclusive_function_system.rs  exclusive_system_param.rs  function_system.rs  input.rs  mod.rs  observer_system.rs  system.rs  system_param.rs  system_registry.rs
crates/bevy_ecs/src/system/commands/: command.rs  entity_command.rs  mod.rs
crates/bevy_ecs/src/system/exclusive_function_system/: boxyexclusivesystem.rs
crates/bevy_ecs/src/system/function_system/: boxysystem.rs
crates/bevy_ecs/src/world/: command_queue.rs  component_constants.rs  deferred_world.rs  entity_ref.rs  error.rs  mod.rs  unsafe_world_cell.rs
example/: Cargo.toml
example/src/: lib.rs
src/: lib.rs
